--- a/index.html
+++ b/index.html
@@ -59,5 +59,9 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+
+    <!-- Cloudflare Web Analytics -->
+    <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "2aecdc025eb043bc89ce931b54a80054"}'></script>
+    <!-- End Cloudflare Web Analytics -->
   </body>
 </html>
