--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
     <link rel="dns-prefetch" href="https://ipinfo.io">
     <link rel="preconnect" href="https://ipinfo.io" crossorigin>
     
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;500&family=Noto+Sans+SC:wght@400;500&display=swap" rel="stylesheet">
+    
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://litek.typist.cc/" />
