--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="dns-prefetch" href="https://ipinfo.io">
     <link rel="preconnect" href="https://ipinfo.io" crossorigin>
     
-    <!-- Google Fonts -->
+    <!-- Google Fonts - 业界标准方式：同步加载 + display=swap -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;500&family=Noto+Sans+SC:wght@400;500&display=swap" rel="stylesheet">
