refactor: update DNS prefetch links in index.html
- Changed the DNS prefetch link for ipinfo.io to a more specific resource.
- Removed the preconnect link for ipinfo.io and added a new DNS prefetch link for static.cloudflareinsights.com.

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href="/lite.svg" />
     
-    <!-- DNS Prefetch & Preconnect for external APIs -->
+    <!-- DNS Prefetch for external resources -->
     <link rel="dns-prefetch" href="https://ipinfo.io">
-    <link rel="preconnect" href="https://ipinfo.io" crossorigin>
+    <link rel="dns-prefetch" href="https://static.cloudflareinsights.com">
     
     <!-- Google Fonts - 业界标准方式：同步加载 + display=swap -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
