--- a/index.html
+++ b/index.html
@@ -18,10 +18,13 @@
     <link rel="dns-prefetch" href="https://ipinfo.io">
     <link rel="dns-prefetch" href="https://static.cloudflareinsights.com">
     
-    <!-- Google Fonts - 业界标准方式：同步加载 + display=swap -->
+    <!-- Google Fonts - 异步加载避免阻塞渲染 -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;500&family=Noto+Sans+SC:wght@400;500&display=swap" rel="stylesheet">
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;500&family=Noto+Sans+SC:wght@400;500&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript>
+      <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;500&family=Noto+Sans+SC:wght@400;500&display=swap" rel="stylesheet">
+    </noscript>
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
