--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     
     <!-- DNS Prefetch for external resources -->
     <link rel="dns-prefetch" href="https://ipinfo.io">
+    <link rel="dns-prefetch" href="https://static.cloudflareinsights.com">
     
     <!-- Google Fonts - 异步加载避免阻塞渲染 -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -66,5 +67,9 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+
+    <!-- Cloudflare Web Analytics - Only in Production -->
+    <!--CLOUDFLARE_ANALYTICS_PLACEHOLDER-->
+    <!-- End Cloudflare Web Analytics -->
   </body>
 </html>
