chore: update Cloudflare Analytics comments and configuration
- Updated comment in index.html to indicate that Cloudflare Web Analytics is disabled.
- Commented out the HTML transformation plugin for Cloudflare Analytics in vite.config.ts, simplifying the configuration for development.

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
 
-    <!-- Cloudflare Web Analytics - Only in Production -->
+    <!-- Cloudflare Web Analytics (disabled) - Only in Production -->
     <!--CLOUDFLARE_ANALYTICS_PLACEHOLDER-->
     <!-- End Cloudflare Web Analytics -->
   </body>
